@@ -1,3 +1,9 @@
+2004-09-29  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* src/legacy/icqt.py:
+	Set encoding and decoding defaults to replace, not error.
+	Strip whitespace.
+
 2004-09-27  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/legacy/glue.py:
